--- a/P1/Vagrantfile
+++ b/P1/Vagrantfile
@@ -1,5 +1,6 @@
 Vagrant.configure("2") do |config|
   config.vm.box = "generic/alpine318"
+  config.vm.synced_folder "shared/", "/vagrant_shared/"
 
   config.vm.provider "virtualbox" do |vb|
     vb.memory = "1024"
@@ -7,30 +8,47 @@ Vagrant.configure("2") do |config|
   end
 
   config.ssh.forward_agent = true
+  config.ssh.username = "vagrant"
 
   config.vm.define "mbouquetS" do |server|
     server.vm.hostname = "mbouquetS"
-    server.vm.network "private_network", ip: "192.168.56.110", hostname: true
+    server.vm.network "private_network", ip: "192.168.56.110"
+
+    server.vm.provision "shell", privileged: true, inline: <<-SHELL
+      echo "Hello, i'm the master"
+      apk update
+
+      curl -LO "https://dl.k8s.io/release/$(curl -L -s https://dl.k8s.io/release/stable.txt)/bin/linux/amd64/kubectl"
+      chmod +x kubectl
+
+      # INSTALL_K3S_EXEC is used to configure the installation
+      #  https://docs.k3s.io/reference/env-variables 
+      export INSTALL_K3S_EXEC="server --node-external-ip=192.168.56.110 --bind-address=192.168.56.110 --flannel-iface=eth1"
+      curl -sfL https://get.k3s.io | sh -
+      echo "k3s is installing"
+      sleep 12
+      chmod a+r /etc/rancher/k3s/k3s.yaml
+      cp /var/lib/rancher/k3s/server/token /vagrant_shared/
+      cp /etc/rancher/k3s/k3s.yaml /vagrant_shared/
+
+      echo 'source <(kubectl completion bash)' >>~/.bashrc
+      echo 'complete -o default -F __start_kubectl k' >>~/.bashrc
+    SHELL
+
   end  
 
   config.vm.define "mbouquetSW" do |serverWorker|
-    serverWorker.vm.hostname = "mbouquetS"
-    serverWorker.vm.network "private_network", ip: "192.168.56.111", hostname: true
+    serverWorker.vm.hostname = "mbouquetSW"
+    serverWorker.vm.network "private_network", ip: "192.168.56.111"
+
+    serverWorker.vm.provision "shell", privileged: true, inline: <<-SHELL
+      echo "Hello, i'm the node"
+      apk update
+      export INSTALL_K3S_EXEC="--flannel-iface=eth1"
+      export K3S_TOKEN_FILE=/vagrant_shared/token
+      export K3S_URL=https://192.168.56.110:6443
+      curl -sfL https://get.k3s.io |  sh -
+    SHELL
   end 
-  
-  config.vm.provision "shell", inline: <<-SHELL
-    echo "Hello Manon !"
-  SHELL
 
-  #
-  # View the documentation for the provider you are using for more
-  # information on available options.
-
-  # Enable provisioning with a shell script. Additional provisioners such as
-  # Ansible, Chef, Docker, Puppet and Salt are also available. Please see the
-  # documentation for more information about their specific syntax and use.
-  # config.vm.provision "shell", inline: <<-SHELL
-  #   apt-get update
-  #   apt-get install -y apache2
-  # SHELL
 end
