Add README and ingress configuration

--- a/P2/helm/deployment.yaml
+++ b/P2/helm/deployment.yaml
@@ -18,5 +18,8 @@ spec:
           image: {{ .image }}
           ports:
             - containerPort: {{ .port }}
+          env:
+          - name: MESSAGE
+            value: {{ .message }}
 ---
 {{- end }}
