--- a/P2/helm/values.yaml
+++ b/P2/helm/values.yaml
@@ -3,57 +3,19 @@ apps:
     replicas: 1
     image: paulbouwer/hello-kubernetes:1.10
     port: 80
+    targetport: 8080
+    message: "Hello i'm App1"
 
   - name: app-two
     replicas: 1
     image: paulbouwer/hello-kubernetes:1.10
     port: 80
+    targetport: 8080
+    message: "Hello i'm App2"
 
   - name: app-three
     replicas: 3
     image: paulbouwer/hello-kubernetes:1.10
     port: 80
-
-
-# Default config
-replicaCount: 1
-
-imagePullSecrets: []
-nameOverride: ""
-fullnameOverride: ""
-
-serviceAccount:
-  create: true
-  annotations: {}
-  name: ""
-
-podAnnotations: {}
-podSecurityContext: {}
-securityContext: {}
-
-service:
-  type: ClusterIP
-  port: 80
-
-ingress:
-  enabled: false
-  className: ""
-  annotations: {}
-  hosts:
-    - host: chart-example.local
-      paths:
-        - path: /
-          pathType: ImplementationSpecific
-  tls: []
-
-resources: {}
-
-autoscaling:
-  enabled: false
-  minReplicas: 1
-  maxReplicas: 100
-  targetCPUUtilizationPercentage: 80
-
-nodeSelector: {}
-tolerations: []
-affinity: {}
+    targetport: 8080
+    message: "Hello i'm App3"
