Change wil's host, Port forward is removed

--- a/bonus/config/ingress.yaml
+++ b/bonus/config/ingress.yaml
@@ -5,7 +5,7 @@ metadata:
   namespace: dev
 spec:
   rules:
-  - host: wil.local
+  - host: wil-playground.local
     http:
       paths:
       - path: /
